<resources>
    <string name="app_name">premier_meat</string>
    <string name="textCuenta">Ya tienes una cuenta?</string>
    <string name="textRrss">Visita nuerstras redes sociales</string>
    <string name="textLogin">Ingresar</string>
    <string name="textRegister">Registrate</string>
    <string name="textEmail">Ingresa Email</string>
    <string name="textName">Ingresa Nombre</string>
    <string name="textPassword">Ingresa Contraseña</string>
    <string name="textPassword2">Repite la Contraseña</string>
    <string name="textBtnRegistrarse">Registrarse</string>
    <string name="textBtnRBack">Volver</string>
    <string name="textTitleRegister">Rellena tus datos para registrarte!</string>
    <string name="textLoginAccount">Ingresa tus datos para iniciar sesión</string>
    <string name="textBtnListUsers">Listar usuarios</string>
    <string name="textAllUsersRegistered">Usuarios encontrados</string>
    <string name="textWelcomeUser">Bienvenido ${user.name}, que te gustaría hacer?</string>
    <string name="textBtnChangePassword">Cambiar password</string>
    <string name="textWlcomeChangePassword">Rellena los campos para cambiar la contraseña</string>
    <string name="textEditChangePassword1">Ingresa tu password actual</string>
    <string name="textEditChangePassword2">Ingresa tu nueva password</string>
    <string name="textEditChangePassword3">Repite tu nueva password</string>
</resources>