<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity"
    android:background="@drawable/backgorund">

    <ScrollView
        android:id="@+id/scrollViews"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/backgorund"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal">

            <TextView
                android:id="@+id/textTirleRegister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/textTitleRegister"
                android:textColor="@color/accent_gold"
                android:textSize="30sp"
                android:textStyle="bold"
                android:textAlignment="center"
                android:layout_marginTop="30dp"/>

            <EditText
                android:id="@+id/editTextEmail"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:focusable="true"
                android:padding="12dp"
                android:hint="@string/textEmail"
                android:textColorHint="@color/text_white"
                android:textColor="@color/text_white"
                android:background="@drawable/edittext_underline"
                android:textAlignment="center"/>

            <EditText
                android:id="@+id/editTextName"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:focusable="true"
                android:padding="12dp"
                android:hint="@string/textName"
                android:textColorHint="@color/text_white"
                android:textColor="@color/text_white"
                android:background="@drawable/edittext_underline"
                android:textAlignment="center"/>

            <EditText
                android:id="@+id/editTextPassword"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:focusable="true"
                android:padding="12dp"
                android:hint="@string/textPassword"
                android:inputType="textPassword"
                android:textColorHint="@color/text_white"
                android:textColor="@color/text_white"
                android:background="@drawable/edittext_underline"
                android:textAlignment="center"/>

            <EditText
                android:id="@+id/editTextPassword2"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:focusable="true"
                android:padding="12dp"
                android:hint="@string/textPassword2"
                android:inputType="textPassword"
                android:textColorHint="@color/text_white"
                android:textColor="@color/text_white"
                android:background="@drawable/edittext_underline"
                android:textAlignment="center"/>

            <Button
                android:id="@+id/btnRegisterUser"
                android:layout_width="350dp"
                android:layout_height="70dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/golden_border_button"
                android:text="@string/textBtnRegistrarse"
                android:textColor="@color/text_white"
                android:textSize="37sp"
                android:textStyle="bold"/>

            <ImageView
                android:id="@+id/yourImageView"
                android:layout_width="wrap_content"
                android:layout_height="260dp"
                android:src="@drawable/logo" />

            <Button
                android:id="@+id/btnBack"
                android:layout_width="350dp"
                android:layout_height="70dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/golden_border_button"
                android:text="@string/textBtnRBack"
                android:textColor="@color/text_white"
                android:textSize="37sp"
                android:textStyle="bold"/>

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
