<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".ChangePasswordActivity">

    <TextView
        android:id="@+id/textWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/accent_gold"
        android:layout_marginTop="20dp"
        android:text="@string/textWlcomeChangePassword"
        android:textSize="36sp"
        android:textStyle="bold"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <EditText
        android:id="@+id/editTextPasswordCurrent"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@drawable/edittext_underline"
        android:focusable="true"
        android:hint="@string/textEditChangePassword1"
        android:inputType="textPassword"
        android:padding="12dp"
        android:textAlignment="center"
        android:textColor="@color/text_white"
        android:textColorHint="@color/text_white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textWelcome" />

    <EditText
        android:id="@+id/editTextNewPassword"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@drawable/edittext_underline"
        android:focusable="true"
        android:hint="@string/textEditChangePassword2"
        android:inputType="textPassword"
        android:padding="12dp"
        android:textAlignment="center"
        android:textColor="@color/text_white"
        android:textColorHint="@color/text_white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPasswordCurrent" />

    <EditText
        android:id="@+id/editTextNewPassword2"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@drawable/edittext_underline"
        android:focusable="true"
        android:hint="@string/textEditChangePassword3"
        android:inputType="textPassword"
        android:padding="12dp"
        android:textAlignment="center"
        android:textColor="@color/text_white"
        android:textColorHint="@color/text_white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextNewPassword" />

    <Button
        android:id="@+id/btnChangePassword"
        android:layout_width="350dp"
        android:layout_height="70dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/golden_border_button"
        android:text="@string/textBtnChangePassword"
        android:textColor="@color/text_white"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/editTextNewPassword2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnBack"
        android:layout_width="350dp"
        android:layout_height="70dp"
        app:layout_constraintTop_toBottomOf="@+id/btnChangePassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/golden_border_button"
        android:layout_marginTop="40dp"
        android:text="@string/textBtnRBack"
        android:textColor="@color/text_white"
        android:textSize="37sp"
        android:textStyle="bold" />

</androidx.constraintlayout.widget.ConstraintLayout>