<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".MenuActivity">

    <TextView
        android:id="@+id/textWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/accent_gold"
        android:layout_marginTop="20dp"
        android:text="@string/textWelcomeUser"
        android:textSize="37sp"
        android:textStyle="bold"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <Button
        android:id="@+id/btnChangePassword"
        android:layout_width="350dp"
        android:layout_height="70dp"
        app:layout_constraintTop_toBottomOf="@+id/textWelcome"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/golden_border_button"
        android:layout_marginTop="40dp"
        android:text="@string/textBtnChangePassword"
        android:textColor="@color/text_white"
        android:textSize="30sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnBack"
        android:layout_width="350dp"
        android:layout_height="70dp"
        app:layout_constraintTop_toBottomOf="@+id/btnChangePassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/golden_border_button"
        android:layout_marginTop="40dp"
        android:text="@string/textBtnRBack"
        android:textColor="@color/text_white"
        android:textSize="37sp"
        android:textStyle="bold" />

</androidx.constraintlayout.widget.ConstraintLayout>