<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgorund"
    tools:context=".LoginActivity">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/backgorund"
        tools:context=".MainActivity">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="300dp"
                android:id="@+id/logo"
                app:srcCompat="@drawable/logo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                android:id="@+id/textYaTienesUnaCuenta"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/logo"
                android:text="@string/textLoginAccount"
                android:textColor="@color/accent_gold"
                android:textSize="37sp"
                android:textStyle="bold"
                android:textAlignment="center"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <EditText
                android:id="@+id/editTextEmail"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/textYaTienesUnaCuenta"
                android:layout_marginTop="20dp"
                android:focusable="true"
                android:padding="12dp"
                android:hint="@string/textEmail"
                android:textColorHint="@color/text_white"
                android:textColor="@color/text_white"
                android:background="@drawable/edittext_underline"
                android:textAlignment="center"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <EditText
                android:id="@+id/editTextPassword"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/editTextEmail"
                android:layout_marginTop="20dp"
                android:focusable="true"
                android:padding="12dp"
                android:hint="@string/textPassword"
                android:inputType="textPassword"
                android:textColorHint="@color/text_white"
                android:textColor="@color/text_white"
                android:background="@drawable/edittext_underline"
                android:textAlignment="center"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <Button
                android:id="@+id/btnLogin"
                android:layout_width="350dp"
                android:layout_height="70dp"
                app:layout_constraintTop_toBottomOf="@+id/editTextPassword"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:background="@drawable/golden_border_button"
                android:layout_marginTop="40dp"
                android:text="@string/textLogin"
                android:textColor="@color/text_white"
                android:textSize="37sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btnBack"
                android:layout_width="350dp"
                android:layout_height="70dp"
                app:layout_constraintTop_toBottomOf="@+id/btnLogin"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="40dp"
                android:background="@drawable/golden_border_button"
                android:text="@string/textBtnRBack"
                android:textColor="@color/text_white"
                android:textSize="37sp"
                android:textStyle="bold" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>