<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/backgorund">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/backgorund"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        tools:context=".MainActivity">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/logo"
                app:srcCompat="@drawable/logo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="30dp" />

            <TextView
                android:id="@+id/textYaTienesUnaCuenta"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/logo"
                android:text="@string/textCuenta"
                android:textColor="@color/accent_gold"
                android:textSize="37sp"
                android:textStyle="bold"
                android:textAlignment="center"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="30dp" />

            <Button
                android:id="@+id/btnLogin"
                android:layout_width="350dp"
                android:layout_height="70dp"
                app:layout_constraintTop_toBottomOf="@+id/textYaTienesUnaCuenta"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:background="@drawable/golden_border_button"
                android:layout_marginTop="40dp"
                android:text="@string/textLogin"
                android:textColor="@color/text_white"
                android:textSize="37sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btnRegister"
                android:layout_width="350dp"
                android:layout_height="70dp"
                app:layout_constraintTop_toBottomOf="@+id/btnLogin"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="40dp"
                android:background="@drawable/golden_border_button"
                android:text="@string/textRegister"
                android:textColor="@color/text_white"
                android:textSize="37sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textRrss"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/btnRegister"
                android:text="@string/textRrss"
                android:textColor="@color/accent_gold"
                android:textSize="37sp"
                android:textStyle="bold"
                android:textAlignment="center"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="50dp" />

            <ImageView
                android:id="@+id/face"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_marginTop="20dp"
                app:layout_constraintTop_toBottomOf="@+id/textRrss"
                app:srcCompat="@drawable/face"
                app:layout_constraintEnd_toStartOf="@+id/isnta"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

            <ImageView
                android:id="@+id/isnta"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_marginTop="20dp"
                app:layout_constraintTop_toBottomOf="@+id/textRrss"
                app:srcCompat="@drawable/isnta"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

            <ImageView
                android:id="@+id/wsp"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_marginTop="20dp"
                app:layout_constraintTop_toBottomOf="@+id/textRrss"
                app:srcCompat="@drawable/ws"
                app:layout_constraintLeft_toRightOf="@+id/isnta"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintBottom_toBottomOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>